# backend-fabidecor

./: db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
fabidecor/: admin.py  apps.py  models.py  serializers.py  views.py
fabidecor/migrations/: 0001_initial.py  0002_alter_catalago_options.py  0002_temas_imagens_alter_temas_categoria.py  0003_categoria_imagens.py  0004_produto_remove_categoria_isbn.py  0005_remove_temas_isbn_produto_categoria_and_more.py  0006_produto_imagens.py  0007_clientes_delete_informacoes_remove_categoria_tema_and_more.py  0008_delete_clientes.py
fabidecor/models/: __init__.py  catalago.py  catalogo.py  categoria.py  informacoes.py  produto.py  temas.py
fabidecor/serializers/: __init__.py  catalago.py  catalogo.py  categoria.py  informacoes.py  produto.py  temas.py
fabidecor/views/: __init__.py  catalago.py  catalogo.py  categoria.py  informacoes.py  produto.py  temas.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
